# ampforge

./: .clangd  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Makefile  PluginScanner.h  README.md  TODO.md
ToneForge-Roadmap/: 01-phase-1-foundation.md  02-phase-2-pedalboard.md  03-phase-3-performance.md  04-phase-4-live-control.md  05-phase-5-production.md  06-phase-6-hardware.md  EXECUTION-PROGRESS.md  roadmap.md
cmake/: GenerateClangdCompileDb.cmake
docs/: USER_GUIDE.md  release-guide.md  signal-chain-sections.md
installer/: AmpForge.iss
src/: AppDataDir.h  AudioEngine.cpp  AudioEngine.h  ChainListBox.cpp  ChainListBox.h  ControlMap.cpp  ControlMap.h  HostDebug.h  MainComponent.cpp  MainComponent.h  PluginChain.cpp  PluginChain.h  PluginHost.cpp  PluginHost.h  PluginScanGuard.cpp  PluginScanGuard.h  PluginScanner.cpp  PluginScanner.h  Preset.cpp  Preset.h  ScanSubprocess.cpp  ScanSubprocess.h  SceneManager.cpp  SceneManager.h  TemplateManager.cpp  TemplateManager.h  ToneForgeLookAndFeel.cpp  ToneForgeLookAndFeel.h  main.cpp  scan_worker_main.cpp
vst2sdk/: LICENSE
vst2sdk/pluginterfaces/vst2.x/: aeffect.h  aeffectx.h  vstfxstore.h
